# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# Application state management - thread-safe state for UI

load("@pigweed//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//maco_firmware:__subpackages__"])

# Tag verification state enum
cc_library(
    name = "state_id",
    hdrs = ["tag_verification_state.h"],
)

# Setter-only interface for system state backends
cc_library(
    name = "system_state_updater",
    hdrs = ["system_state_updater.h"],
    deps = [
        "//maco_firmware/modules/app_state/ui:snapshot",
    ],
)

# Backend interface for platform-specific system monitoring
cc_library(
    name = "system_monitor_backend",
    hdrs = ["system_monitor_backend.h"],
    deps = [
        ":system_state_updater",
        "@pigweed//pw_async2:dispatcher",
    ],
)

# Thread-safe system state (boot, connectivity, time)
cc_library(
    name = "system_state",
    srcs = ["system_state.cc"],
    hdrs = ["system_state.h"],
    deps = [
        ":system_monitor_backend",
        ":system_state_updater",
        "//maco_firmware/modules/app_state/ui:snapshot",
        "//maco_firmware/modules/gateway:gateway_client",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_log",
        "@pigweed//pw_sync:lock_annotations",
        "@pigweed//pw_sync:mutex",
    ],
)

# Observer interface for TagVerifier state transitions
cc_library(
    name = "tag_verifier_observer",
    hdrs = ["tag_verifier_observer.h"],
    deps = [
        "//maco_firmware:types",
        "@pigweed//pw_bytes",
        "@pigweed//pw_string",
    ],
)

# Authorization cache - fixed-size TagUid → auth result with expiry
cc_library(
    name = "auth_cache",
    hdrs = ["auth_cache.h"],
    deps = [
        "//maco_firmware:types",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_string",
    ],
)

# Session event types for the session HFSM
cc_library(
    name = "session_events",
    hdrs = ["session_events.h"],
    deps = [
        "//maco_firmware:types",
        "//third_party/etl",
        "@pigweed//pw_string",
    ],
)

# Session hierarchical finite state machine (ETL HFSM)
cc_library(
    name = "session_fsm",
    srcs = ["session_fsm.cc"],
    hdrs = ["session_fsm.h"],
    deps = [
        ":session_events",
        ":tag_verifier_observer",
        "//maco_firmware:types",
        "//maco_firmware/modules/app_state/ui:snapshot",
        "//third_party/etl",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_log",
        "@pigweed//pw_string",
        "@pigweed//pw_sync:lock_annotations",
        "@pigweed//pw_sync:mutex",
    ],
)

# Session controller - timeout, hold detection, UI action bridge, combined snapshot
cc_library(
    name = "session_controller",
    srcs = ["session_controller.cc"],
    hdrs = ["session_controller.h"],
    deps = [
        ":session_fsm",
        ":tag_verifier",
        "//maco_firmware/modules/app_state/ui:snapshot",
        "@pigweed//pw_allocator:allocator",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_async2:coro_or_else_task",
        "@pigweed//pw_async2:dispatcher",
        "@pigweed//pw_async2:time_provider",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_log",
    ],
)

# Tag verifier - authenticates NTAG424 tags, reads real UID, and authorizes
cc_library(
    name = "tag_verifier",
    srcs = ["tag_verifier.cc"],
    hdrs = ["tag_verifier.h"],
    deps = [
        ":auth_cache",
        ":tag_verifier_observer",
        "//maco_firmware:types",
        "//maco_firmware/devices/pn532:tag_info",
        "//maco_firmware/modules/app_state/ui:snapshot",
        "//maco_firmware/modules/device_secrets",
        "//maco_firmware/modules/firebase:firebase_client",
        "//maco_firmware/modules/nfc_reader",
        "//maco_firmware/modules/nfc_reader:nfc_event",
        "//maco_firmware/modules/nfc_tag",
        "//maco_firmware/modules/nfc_tag/ntag424:cloud_key_provider",
        "//maco_firmware/modules/nfc_tag/ntag424:local_key_provider",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_tag",
        "@pigweed//pw_allocator:allocator",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_async2:coro",
        "@pigweed//pw_async2:coro_or_else_task",
        "@pigweed//pw_async2:dispatcher",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_log",
        "@pigweed//pw_random",
        "@pigweed//pw_sync:lock_annotations",
        "@pigweed//pw_sync:mutex",
    ],
)

pw_cc_test(
    name = "auth_cache_test",
    srcs = ["auth_cache_test.cc"],
    deps = [
        ":auth_cache",
        "@pigweed//pw_chrono:system_clock",
    ],
)

pw_cc_test(
    name = "session_fsm_test",
    srcs = ["session_fsm_test.cc"],
    deps = [
        ":session_fsm",
        "@pigweed//pw_bytes",
    ],
)

pw_cc_test(
    name = "tag_verifier_test",
    srcs = ["tag_verifier_test.cc"],
    deps = [
        ":tag_verifier",
        ":tag_verifier_observer",
        "//maco_firmware/modules/app_state/ui:snapshot",
        "//maco_firmware/modules/device_secrets:device_secrets_mock",
        "//maco_firmware/modules/firebase:firebase_client",
        "//maco_firmware/modules/nfc_reader/mock:mock_nfc_reader",
        "//maco_firmware/modules/nfc_tag:iso14443_tag_mock",
        "//maco_firmware/modules/nfc_tag/ntag424:ntag424_tag_mock",
        "//proto/firebase_rpc:auth_nanopb",
        "//proto/gateway:gateway_service_nanopb",
        "//proto/gateway:gateway_service_nanopb_rpc",
        "@pigweed//pw_allocator:testing",
        "@pigweed//pw_async2:basic_dispatcher",
        "@pigweed//pw_async2:coro_or_else_task",
        "@pigweed//pw_bytes",
        "@pigweed//pw_random",
        "@pigweed//pw_rpc/nanopb:client_testing",
    ],
)
